# SocialX

./: .env.example  .gitignore  CONTRIBUTING.md  LICENSE  README.md  SETUP.md  docker-compose.yml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
ai-engine/: Dockerfile  Dockerfile.minimal  pyproject.toml  requirements-base.txt  requirements.txt  setup.cfg
ai-engine/src/: __init__.py  config.py  database.py  main.py
ai-engine/src/embeddings/: __init__.py  service.py
ai-engine/src/learning/: __init__.py  pattern_learner.py
ai-engine/src/personality/: __init__.py  analyzer.py
backend/: .eslintrc.json  Dockerfile  package-lock.json  package.json  test-env.js
backend/database/: init.sql
backend/src/: index.ts
backend/src/config/: index.ts
backend/src/database/: client.ts
backend/src/services/: agent.ts  openrouter.ts  safety.ts  scheduler.ts  twitter.ts  vectordb.ts
backend/src/utils/: logger.ts  rate-limiter.ts
scripts/: README.md  quick-start.sh  test.sh  validate-setup.sh
