[tool.poetry]
name = "socialx-ai-engine"
version = "1.0.0"
description = "SocialX AI Engine - Personality Modeling and Learning"
authors = ["Your Name <you@example.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.104.1"
uvicorn = {extras = ["standard"], version = "^0.24.0"}
pydantic = "^2.5.2"
python-dotenv = "^1.0.0"
psycopg2-binary = "^2.9.9"
sqlalchemy = "^2.0.23"
chromadb = "^0.4.18"
redis = "^5.0.1"
transformers = "^4.35.2"
torch = "^2.1.1"
sentence-transformers = "^2.2.2"
scikit-learn = "^1.3.2"
nltk = "^3.8.1"
spacy = "^3.7.2"
httpx = "^0.25.2"
loguru = "^0.7.2"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"
pytest-asyncio = "^0.21.1"
black = "^23.12.0"
ruff = "^0.1.7"
mypy = "^1.7.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 100
target-version = ['py311']

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
